added basic info section and css to the existing html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <title>Corbin Baucoms Portfolio</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>Corbin</li>
-            <li>Résumé</li>
-            <li>Projects</li>
+    <nav class="navigation-bar">
+        <ul class="navigation-ul">
+            <li class="navigation-item"><a href="#">Corbin</a></li>
+            <li class="navigation-item">Résumé</li>
+            <li class="navigation-item">Projects</li>
         </ul>
     </nav>
+    <div class="basic-info-section">
+        <h1>Corbin Baucoms Portfolio</h1>
+        <img src="#">
+        <p>Hello! My name is Corbin and I am currently an employee at an apple authorized store. My passion lies with tech but more specifically I love to program, delve into multiple different OS's and the distros
+            for said OS's. I use GitHub Pages to host this site, so big thanks to them for that super neat feature.
+        </p>
+    </div>
+    <div class="resume-section">
+        
+    </div>
+    <div class="projects-section"> </div>
 </body>
 
 
