added an image and css for said image.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <div class="basic-info-section">
         <h1>Corbin Baucoms Portfolio</h1>
-        <img src="#">
+        <img src="corbinsface.jpg">
         <p>Hello! My name is Corbin and I am currently an employee at an apple authorized store. My passion lies with tech but more specifically I love to program, delve into multiple different OS's and the distros
             for said OS's. I use GitHub Pages to host this site, so big thanks to them for that super neat feature.
         </p>
