Added resume section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,29 @@
         </p>
     </div>
     <div class="resume-section">
-        
+        <div class="job-history">
+            <ul class="job">
+                <h1>Front-end Associate, Junior Apple Certified Technician</h1>
+                <li>Assisted customers with troubleshooting apple products</li>
+                <li>Assisted in apple product repairs, including but not limtited to data transfers and general cleanup of devices.</li>
+                <li>Contributed to sales department with an average of selling 2-5 high value products a day.</li>
+                <li>Certified to repair modern Mac's and iPhone's.</li>
+            </ul>
+            <ul class="job">
+                <h1>Overnight Maintenance</h1>
+                <li>Ensure cleanliness of floors, bathrooms, and commonly congregated areas.</li>
+                <li>Filled in for other positions when needed, while still having my normal workload</li>
+                <li>Setup cleaning plans for the maintenace team to follow</li>
+            </ul>
+            <ul class="job">
+                <h1>Key Holder</h1>
+                <li>Opening and closing of store per daily schedule.</li>
+                <li>Provide reports regarding daily finances in the store.</li>
+                <li>Upsold products on a daily basis for a variety of products.</li>
+                <li>Maintain stocked shelves throughout the day, refilling when necessary.</li>
+                <li>Keep track of daily inventory by properly recieving packages and doing product counts.</li>
+            </ul>
+        </div>
     </div>
     <div class="projects-section"> </div>
 </body>
