added styling and new files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class="navigation-ul">
             <li class="navigation-item"><a href="#">Corbin</a></li>
             <li class="navigation-item">Résumé</li>
-            <li class="navigation-item">Projects</li>
+            <li class="navigation-item"><a href=projects.html>Projects</a></li>
         </ul>
     </nav>
     <div class="basic-info-section">
@@ -45,8 +45,17 @@
                 <li>Keep track of daily inventory by properly recieving packages and doing product counts.</li>
             </ul>
         </div>
+        <div class="skills">
+            <img>
+            <img>
+            <img>
+            <img>
+            <img>
+        </div>
     </div>
-    <div class="projects-section"> </div>
+    <div class="projects-section">
+        <a href="https://github.com/CMBBauc?tab=repositories">GitHub Repositories</a>
+    </div>
 </body>
 
 
