--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="projects-section">
-        <a href="https://github.com/CMBBauc?tab=repositories">GitHub Repositories</a>
+        <a href="https://github.com/CMBBauc?tab=repositories">test GitHub Repositories</a>
     </div>
 </body>
 
